--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral() // add repository
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0' // add plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
